--- a/templates/dashboard/horarios.html
+++ b/templates/dashboard/horarios.html
@@ -52,7 +52,7 @@
             <div class="row align-items-end my-3">
                 <!-- Espacio y botones -->
                 <div class="d-flex justify-content-center mt-3">
-                    <button class="btn btn-success btn-lg mx-2" onclick="generarHorario()">Generar Horario</button>
+                    <button class="btn btn-success btn-lg mx-2" onclick="generarHorario()"><i class="fa fa-robot me-2"></i> Generar Horario</button>
                     <button class="btn btn-success btn-lg mx-2 d-none" id="btnRegistrar" onclick="confirmarRegistrarHorario()">
                         <i class="fa fa-save me-2"></i>Registrar Horario
                     </button>
