--- a/templates/dashboard/ambientesxcurso.html
+++ b/templates/dashboard/ambientesxcurso.html
@@ -168,30 +168,42 @@
         var cursoId = $('#cursoIdSeleccionado').val();
         var ambientes = ambientesSeleccionados.map(amb => amb.id);
 
-        $.ajax({
-            url: '/asignar_ambientes',
-            method: 'POST',
-            contentType: 'application/json',
-            data: JSON.stringify({ idcurso: cursoId, idambientes: ambientes, eliminados: ambientesEliminados.map(amb => amb.id) }),
-            success: function (response) {
-                $('#modalAsignacion').modal('hide');
-                rellenarTablaCursos($('#escuela').val(), $('#semestre').val());
-                ambientesEliminados = [];
-                Swal.fire({
-                    icon: 'success',
-                    title: 'Actualización exitosa',
-                    text: 'Ambientes asignados exitosamente.'
+        Swal.fire({
+                title: `¿Estás seguro de asignar el(los) ambiente(s)?`,
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sí, asignar',
+                cancelButtonText: 'Cancelar'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                $.ajax({
+                    url: '/asignar_ambientes',
+                    method: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify({ idcurso: cursoId, idambientes: ambientes, eliminados: ambientesEliminados.map(amb => amb.id) }),
+                    success: function (response) {
+                        $('#modalAsignacion').modal('hide');
+                        rellenarTablaCursos($('#escuela').val(), $('#semestre').val());
+                        ambientesEliminados = [];
+                        Swal.fire({
+                            icon: 'success',
+                            title: 'Actualización exitosa',
+                            text: 'Ambientes asignados exitosamente.'
+                        });
+                    },
+                    error: function (xhr, status, error) {
+                        console.error('Error al asignar ambientes:', error);
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: 'Error al asignar ambientes. Por favor, inténtelo de nuevo.'
+                        });
+                    }
                 });
-            },
-            error: function (xhr, status, error) {
-                console.error('Error al asignar ambientes:', error);
-                Swal.fire({
-                    icon: 'error',
-                    title: 'Error',
-                    text: 'Error al asignar ambientes. Por favor, inténtelo de nuevo.'
-                });
-            }
-        });
+                }
+            });
     });
 
         $('#tabla-cursos tbody').on('click', '.btnAsignar', function () {
