--- a/templates/dashboard/docentes/grupo_docentes.html
+++ b/templates/dashboard/docentes/grupo_docentes.html
@@ -166,27 +166,35 @@
                 var grupoId = $('#grupoIdSeleccionado').val();
                 var docentes = docentesSeleccionados.map(doc => doc.id);
     
-                $.ajax({
-                    url: '/asignar_docentes',
-                    method: 'POST',
-                    contentType: 'application/json',
-                    data: JSON.stringify({ grupoId: grupoId, docentes: docentes, eliminados: docentesEliminados.map(doc => doc.id) }),
-                    success: function (response) {
-                        $('#modalAsignacion').modal('hide');
-                        rellenarTablaCursos($('#escuela').val(), $('#semestre').val());
-                        docentesEliminados = []; 
-                        Swal.fire({
-                        icon: 'success',
-                        title: 'Actualización exitosa',
-                        text: 'Docentes asignados exitosamente.'
-                    });
-                    },
-                    error: function (xhr, status, error) {
-                        console.error('Error al asignar docentes:', error);
-                        Swal.fire({
-                        icon: 'error',
-                        title: 'Error',
-                        text: 'Error al asignar ambientes. Por favor, inténtelo de nuevo.'
+                Swal.fire({
+                title: `¿Estás seguro de asignar el(los) ambiente(s)?`,
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sí, asignar',
+                cancelButtonText: 'Cancelar'
+                }).then((result) => {
+                    if (result.isConfirmed) {
+                    $.ajax({
+                        url: '/asignar_docentes',
+                        method: 'POST',
+                        contentType: 'application/json',
+                        data: JSON.stringify({ grupoId: grupoId, docentes: docentes, eliminados: docentesEliminados.map(doc => doc.id) }),
+                        success: function (response) {
+                            $('#modalAsignacion').modal('hide');
+                            rellenarTablaCursos($('#escuela').val(), $('#semestre').val());
+                            docentesEliminados = []; 
+                            Swal.fire('Éxito', 'Docentes asignados correctamente', 'success');
+                        },
+                        error: function (xhr, status, error) {
+                            console.error('Error al asignar docentes:', error);
+                            Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: 'Error al asignar ambientes. Por favor, inténtelo de nuevo.'
+                        });
+                        }
                     });
                     }
                 });
