--- a/templates/dashboard/docentexcurso.html
+++ b/templates/dashboard/docentexcurso.html
@@ -166,18 +166,31 @@ $(document).ready(function () {
             var grupoId = $('#grupoIdSeleccionado').val();
             var docentes = docentesSeleccionados.map(doc => doc.id);
 
-            $.ajax({
-                url: '/asignar_docentes',
-                method: 'POST',
-                contentType: 'application/json',
-                data: JSON.stringify({ grupoId: grupoId, docentes: docentes, eliminados: docentesEliminados.map(doc => doc.id) }),
-                success: function (response) {
-                    $('#modalAsignacion').modal('hide');
-                    rellenarTablaCursos($('#escuela').val(), $('#semestre').val());
-                    docentesEliminados = [];  
-                },
-                error: function (xhr, status, error) {
-                    console.error('Error al asignar docentes:', error);
+            Swal.fire({
+                title: `¿Estás seguro de asignar el(los) docente(s)?`,
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sí, asignar',
+                cancelButtonText: 'Cancelar'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                $.ajax({
+                    url: '/asignar_docentes',
+                    method: 'POST',
+                    contentType: 'application/json',
+                    data: JSON.stringify({ grupoId: grupoId, docentes: docentes, eliminados: docentesEliminados.map(doc => doc.id) }),
+                    success: function (response) {
+                        $('#modalAsignacion').modal('hide');
+                        rellenarTablaCursos($('#escuela').val(), $('#semestre').val());
+                        docentesEliminados = [];
+                        Swal.fire('Éxito', 'Docentes asignados correctamente', 'success');
+                    },
+                    error: function (xhr, status, error) {
+                        console.error('Error al asignar docentes:', error);
+                    }
+                });
                 }
             });
         });
