reporte carga horaria

--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -294,15 +294,19 @@
 								<li class="sidebar-item a" hidden>
 									<a class="sidebar-link " href="{{url_for('ReporteAmbiente')}}">
 										<i class="align-middle" data-feather="align-left"></i> <span
-											class="align-middle">Reporte Ambientes</span>
+											class="align-middle">Reporte_Ambientes</span>
+									</a>
+								</li>
+								<li class="sidebar-item a" hidden>
+									<a class="sidebar-link " href="{{url_for('reporte_horas_html')}}">
+										<i class="align-middle" data-feather="align-left"></i> <span
+											class="align-middle">Reporte carga academica</span>
 									</a>
 								</li>
 							</ul>
-
-
+							
 						</li>
-
-
+						
 					</ul>
 				</div>
 			</nav>
