CAMBIOS_PDF_MARCIA

--- a/templates/dashboard/ambientes.html
+++ b/templates/dashboard/ambientes.html
@@ -221,9 +221,65 @@
                                 className: 'dropdown-item'
                             },
                             {
-                                extend: 'pdf',
-                                text: '<i class="fas fa-file-pdf"></i> PDF',
-                                className: 'dropdown-item'
+                                extend: 'pdfHtml5',
+                                text: '<i class="far fa-file-pdf"></i> PDF',
+                                className: 'dropdown-item',
+                                exportOptions: {
+                                    columns: ':not(:last-child)'
+                                },
+                                orientation: 'portrait', // O 'landscape'
+                                pageSize: 'A4',
+                                customize: function (doc) {
+
+
+                                    var imageUrl = 'static/login/images/usat_logo_red.png';
+                                    // Ajustar márgenes para que la tabla ocupe toda la página
+                                    doc.pageMargins = [20, 10, 20, 20]; // [superior, derecha, inferior, izquierda]
+
+                                    // Personalizar el contenido del PDF
+                                    doc.content[0].text = 'REPORTE DE AMBIENTES';
+                                    
+                                    // Cambiar el estilo de la tabla
+                                    doc.styles.tableHeader = {
+                                        fillColor: '#E33439',
+                                        color: 'white',
+                                        fontSize: 12,
+                                        bold: true
+                                    };
+
+                                    doc.styles.table = {
+                                        fillColor: '#ffffff',
+                                        fontSize: 10
+                                    };
+
+                                    var body = doc.content[1].table.body;
+                                    body.forEach(function (row) {
+                                        var TipoCursoIndex = 2; // posición de la columna
+                                        var fillColor;
+                                        if (row[TipoCursoIndex].text == 'ACTIVO') {
+                                            fillColor = '#90EE90'; // Verde
+                                        } else if (row[TipoCursoIndex].text == 'INACTIVO') {
+                                            fillColor = '#00FFFF'; // Azul
+                                        }
+
+                                        if (fillColor) {
+                                            row.forEach(function (cell) {
+                                                cell.fillColor = fillColor;
+                                            });
+                                        }
+                                    });
+
+                                    // Ajustar la tabla para que no tenga bordes
+                                    doc.content[1].layout = {
+                                        hLineWidth: function (i, node) { return 0; },
+                                        vLineWidth: function (i, node) { return 0; },
+                                        paddingLeft: function (i) { return 8; },
+                                        paddingRight: function (i) { return 8; },
+                                        paddingTop: function (i) { return 8; },
+                                        paddingBottom: function (i) { return 8; },
+                                        fillColor: function (rowIndex, node, columnIndex) { return null; }
+                                    };
+                                }
                             },
                             {
                                 extend: 'print',
