[FIX] CURSOS/GRUPOS /DOCENTE/ HORARIOS/DISPONIBILIDAD
-Cambios en cursos , corecion minima de diseño y validacions
-Cambios de logica y diseño en grupos , participante si trabajo
-Horarios validaciones revisadas y agregadas, librerias agregadas para diseño del horario
-Disponibilidad (NO ARREGLO SU TRABAJO), PARTICIPANTE NO CONCLUYO

--- a/templates/dashboard/docentes.html
+++ b/templates/dashboard/docentes.html
@@ -78,7 +78,7 @@
                             <input type="number" class="form-control" id="cantHorasDocente" name="cantHoras" required>
                         </div>
                         <div class="mb-3">
-                            <label for="tiempoRefDocente" class="form-label">Tiempo de Referencia:</label>
+                            <label for="tiempoRefDocente" class="form-label">Tiempo de Refrigerio:</label>
                             <input type="number" class="form-control" id="tiempoRefDocente" name="tiempo_ref" required>
                         </div>
                         <div class="mb-3">
@@ -288,7 +288,7 @@
                 responsive: true,
                 autoWidth: true,
                 searching: true,
-                scrollY: "510px",
+                scrollY: "620px",
                 order: [],
                 dom: 'Bfrtip',
                 buttons: [
