--- a/templates/dashboard/gruposxcurso.html
+++ b/templates/dashboard/gruposxcurso.html
@@ -1,6 +1,6 @@
 {% extends "dashboard/index.html" %}
 
-{% block titulo %} Cursos {% endblock %}
+{% block titulo %} Asignar grupos - Curso {% endblock %}
 
 {% block contenido %}
 
@@ -18,6 +18,11 @@
             data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
             Grupo por curso
         </div>
+
+
+
+
+        
         <div class="ms-4 mt-3">
             <!-- Semestre -->
             <div class="d-flex mb-3 mt-3">
