--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -138,7 +138,7 @@
 								</li>
 
 								<li class="sidebar-item">
-									<a class="sidebar-link" href="{{url_for('cursosxescuela')}}">
+									<a class="sidebar-link" href="{{url_for('gruposxcurso')}}">
 										<i class="align-middle" data-feather="check-square"></i> <span
 											class="align-middle">Grupos por curso</span>
 									</a>
