--- a/templates/dashboard/disponibilidad.html
+++ b/templates/dashboard/disponibilidad.html
@@ -142,7 +142,7 @@
 
     function cargarDocentes() {
         $.ajax({
-            url: '/docentes_disponibilidad',
+            url: '/get_disponibilidad',
             type: 'GET',
             success: function (data) {
                 if (data.error) {
@@ -165,6 +165,22 @@
             }
         });
     }
+    var idDocente;
+    function obteneridDocenteNombre(nombres){
+            $.ajax({
+                url: '/obtener_docente_por_nombre',
+                type: 'POST',
+                contentType: 'application/json',
+                data: JSON.stringify({nombres:nombres}),
+                success: function (response) {
+                    console.log(response);
+                    idDocente=response.idpersona;
+                },
+                error: function (xhr, status, error) {
+                   // mostrarAlerta('error', 'Error', 'Hubo un error al realizar la operación.');
+                }
+            });
+        }
 
     $(document).ready(function () {
         cargarDocentes();
@@ -311,6 +327,7 @@
                 timer: 5000
             });
         }
+
 
         $('#formDisponibilidad').submit(function (e) {
             e.preventDefault();
