--- a/templates/dashboard/cursos.html
+++ b/templates/dashboard/cursos.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="mb-3">
                         <label for="cicloCurso" class="form-label">Ciclo:</label>
-                        <input type="text" class="form-control" id="cicloCurso" name="cicloCurso" required>
+                        <input type="text" class="form-control" id="cicloCurso" name="cicloCurso" required min="1" max="10" required>
                     </div>
                     <div class="mb-3">
                         <label for="tipoCurso" class="form-label">Tipo de Curso:</label>
