--- a/templates/dashboard/horarios.html
+++ b/templates/dashboard/horarios.html
@@ -27,11 +27,11 @@
                 <div id="estadoGeneracion">
                     <!-- Estado de generación aquí -->
                     <div id="estadoGeneracion">
-                        <div class="d-flex align-items-center mb-2">
+                        <!-- <div class="d-flex align-items-center mb-2">
                             <div class="spinner-border spinner-border-sm text-success me-2" role="status" id="spinner1">
                             </div>
                             <div id="estadoDisponibilidad">Disponibilidad de docentes</div>
-                        </div>
+                        </div> -->
                         <div class="d-flex align-items-center mb-2">
                             <div class="spinner-border spinner-border-sm text-success me-2" role="status" id="spinner2">
                             </div>
@@ -47,11 +47,11 @@
                             </div>
                             <div id="estadoMinimoHorasAsignado">Mínimo de horas asignado</div>
                         </div>
-                        <div class="d-flex align-items-center mb-2">
+                        <!-- <div class="d-flex align-items-center mb-2">
                             <div class="spinner-border spinner-border-sm text-success me-2" role="status" id="spinner5">
                             </div>
                             <div id="get_docentes_no_asignados">Docentes asignados a grupos</div>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
