--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -171,12 +171,12 @@
 									</a>
 								</li>
 
-								<li class="sidebar-item">
+								<!-- <li class="sidebar-item">
 									<a class="sidebar-link" href="{{url_for('docentesxcursos')}}">
 										<img data-image="" src="https://img.icons8.com/metro/26/classroom.png"
 											alt="classroom" /> <span class="align-middle">Docentes por curso</span>
 									</a>
-								</li>
+								</li> -->
 
 								<li class="sidebar-item">
 									<a class="sidebar-link" href="{{url_for('grupo_docentes')}}">
@@ -279,7 +279,7 @@
 
 
 						<!-- aca -->
-						<li class="sidebar-item">
+						<!-- <li class="sidebar-item">
 							<span class="sidebar-link a d-flex align-items-center">
 								<i class="align-middle" data-feather="align-left"></i>
 								<span class="align-middle">Reporte Ambientes</span>
@@ -305,7 +305,7 @@
 								</li>
 							</ul>
 							
-						</li>
+						</li> -->
 						
 					</ul>
 				</div>
